PA_Education/TestMenifest/force-app/main/default/objects/Applyto__c/Applyto__c.object-meta.xml
<CustomObject>
    <description>지원자 정보, 지원 Object</description>
    <label>지원</label>
    <nameField>
        <displayFormat>지원-{0000}</displayFormat>
        <label>지원 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>