PA_Education/TestMenifest/force-app/main/default/objects/Applyto__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <label>지원자 이름</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>