PA_Education/TestMenifest/force-app/main/default/objects/Applyto__c/fields/ApplyDate__c.field-meta.xml
<CustomField>
    <fullName>ApplyDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>지원일시</label>
    <type>DateTime</type>
</CustomField>