PA_Education/TestMenifest/force-app/main/default/objects/Applyto__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>생년월일</label>
    <required>true</required>
    <type>Date</type>
</CustomField>