PA_Education/TestMenifest/force-app/main/default/objects/Applyto__c/fields/fm_subject__c.field-meta.xml
<CustomField>
    <fullName>fm_subject__c</fullName>
    <formula>JobPosition__r.fm_subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>채용 명</label>
    <type>Text</type>
</CustomField>