PA_Education/TestMenifest/force-app/main/default/objects/Applyto__c/fields/JobPosition__c.field-meta.xml
<CustomField>
    <fullName>JobPosition__c</fullName>
    <description>인재채용 - Master Detail
지원자가 지원하는 포지션</description>
    <label>포지션 명</label>
    <referenceTo>JobPosition__c</referenceTo>
    <relationshipLabel>지원</relationshipLabel>
    <relationshipName>JobPositionDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>