PA_Education/TestMenifest/force-app/main/default/objects/Applyto__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>휴대폰</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>