PA_Education/TestMenifest/force-app/main/default/objects/Applyto__c/fields/PersonalInformationUseAgreement__c.field-meta.xml
<CustomField>
    <fullName>PersonalInformationUseAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>인재채용 지원 시, 개인정보 수집 및 활용 동의 Field</description>
    <label>개인정보 수집 및 활용 동의</label>
    <type>Checkbox</type>
</CustomField>