PA_Education/TestMenifest/force-app/main/default/objects/Applyto__c/fields/PersonalInformationUseAgreementDate__c.field-meta.xml
<CustomField>
    <fullName>PersonalInformationUseAgreementDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>인재채용 지원시 개인정보 수집 및 활용 동의 변경일</description>
    <label>개인정보 수집 및 활용 동의 변경일</label>
    <type>Date</type>
</CustomField>