PA_Education/TestMenifest/force-app/main/default/objects/Applyto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JobPosition__c</columns>
    <columns>Applicant__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Birthday__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>